[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-mevscope"
version = "0.1.0"
description = "Replays a tx or address history to attribute sandwich, frontrun, and backrun MEV extraction with per-trade loss accounting."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "web3", "mevscope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/mevscope"

[project.scripts]
mevscope = "mevscope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mevscope"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E501"]
